--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
-body {
+*,
+*::after,
+*::before {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  /* Typography */
+  --family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen','Ubuntu', 'Cantarell', 
+  'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+
+  --fs-sm: 14px;
+  --fs-md: 16px;
+
+  --fw-small: 300;
+  --fw-normal: 600;
+  --fw-bold: 800;
+
+  /* Other */
+  --background: linear-gradient(180deg, #E6D4DE 0%, #9890C7 100%);
+}
+
+body {
+  font-family: var(--family);
+  background: var(--background);
+  background-repeat: no-repeat;
+  height: 100vh;
 }
