refactor: change state of modals from reducer to local state

--- a/src/features/packName/tableCardName/tableCardName.module.css
+++ b/src/features/packName/tableCardName/tableCardName.module.css
@@ -16,9 +16,10 @@
     padding-left: 10px;
 }
 
-.arrowBackSharpIcon {
+.arrow_back {
     display: flex;
     justify-content: flex-start;
+    align-items: center;
 }
 
 .inputContainer {
