--- a/src/components/Modals/customModals/CustomModal.module.css
+++ b/src/components/Modals/customModals/CustomModal.module.css
@@ -41,3 +41,9 @@
 .checkbox {
     margin-bottom: 2rem!important;
 }
+
+.error {
+    text-align: center;
+    color: red;
+    margin-top: 1rem;
+}
