--- a/src/components/Modals/customModals/CustomModal.module.css
+++ b/src/components/Modals/customModals/CustomModal.module.css
@@ -15,11 +15,15 @@
     background-color: #EDF0F6;
 }
 
+.label {
+    margin-bottom: .5rem;
+}
+
 .image {
     width: 100%;
     max-height: 200px;
     object-fit: cover;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 
 .description {
