--- a/src/features/users/users/Users.module.css
+++ b/src/features/users/users/Users.module.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     background-color: #ffffff;
-    padding: 2rem 0rem;
+    padding: 2rem 0;
 }
 
 .title {
@@ -19,4 +19,22 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.list {
+    width: 70%;
+    background-color: #fff;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    margin: 0 auto!important;
+}
+
+.item {
+    border-bottom: 1px solid;
+    border-bottom-color: rgba(0, 0, 0, 0.12);
+    padding-bottom: 10px;
+}
+
+.description {
+    display: block;
 }
