--- a/src/features/users/users/Users.module.css
+++ b/src/features/users/users/Users.module.css
@@ -1,3 +1,10 @@
+.wrapper {
+    margin-top: 20px;
+    border-radius: 5px;
+    background-color: #fff;
+    height: 780px;
+}
+
 .pagination {
     display: flex;
     align-items: center;
@@ -27,6 +34,8 @@
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     margin: 0 auto!important;
+    overflow-y: auto;
+    height: 515px;
 }
 
 .item {
