--- a/src/features/packsList/PacksList.module.css
+++ b/src/features/packsList/PacksList.module.css
@@ -1,9 +1,10 @@
 .container {
     width: 1100px;
-    min-height: 670px;
+    height: 691px;
     border-radius: 8px;
     background: #FEFEFF;
     display: grid;
     grid-template-columns: 250px 1fr;
     margin: 24px auto 0;
+    overflow: hidden;
 }
